css/style.css
body {
  background-color: #151517;
  overflow: hidden;
  height: 100%;
  width: 100%;
  padding: 0;
  margin: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-user-select: none;
     -moz-user-select: none;
      -ms-user-select: none;
          user-select: none;
}

#nebula {
  background: url('http://i.imgbox.com/t1eWiQco.jpg') no-repeat;
  min-width: 120%;
  min-height: 120%;
  background-size: cover;
  background-position: center;
  opacity: 0.3;
}

#parallax {
  background: radial-gradient(ellipse at center, #1d062b, #151517);
}

#particles-js, #parallax, .layer, .some-space {
  height: 100%;
  position: absolute;
  width: 100%;
}

#particles-js2 {
  opacity: 1;
}

  opacity: 0.4;
}

#particles-js3 {
  opacity: 0.3;
}

#logo {
  -webkit-box-shadow: 0 0 7px 1px #FFFFFF;
box-shadow: 0 0 7px 1px #FFFFFF;
}

#logo-container {
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate3d(-50%, -50%, 0);
          transform: translate3d(-50%, -50%, 0);
}
.txt{
  margin: 0 auto;
  padding-left: 39%;
  padding-top: 33%;
}
#headings{
  color: #DB6127;
  font-size: 2.3em;
  font-family: 'Raleway',sans-serif;
  font-weight: 800;
}
.some-space {
  -webkit-animation: rotate 18s 0.5s infinite linear reverse;
          animation: rotate 18s 0.5s infinite linear reverse;
}

@-webkit-keyframes rotate {
  0% {
    -webkit-transform: rotateZ(0deg) translate3d(0, 1.5%, 0) rotateZ(0deg);
            transform: rotateZ(0deg) translate3d(0, 1.5%, 0) rotateZ(0deg);
  }
  100% {
    -webkit-transform: rotateZ(360deg) translate3d(0, 1.5%, 0) rotateZ(-360deg);
            transform: rotateZ(360deg) translate3d(0, 1.5%, 0) rotateZ(-360deg);
  }
}

@keyframes rotate {
  0% {
    -webkit-transform: rotateZ(0deg) translate3d(0, 1.5%, 0) rotateZ(0deg);
            transform: rotateZ(0deg) translate3d(0, 1.5%, 0) rotateZ(0deg);
  }
  100% {
    -webkit-transform: rotateZ(360deg) translate3d(0, 1.5%, 0) rotateZ(-360deg);
            transform: rotateZ(360deg) translate3d(0, 1.5%, 0) rotateZ(-360deg);
  }
}

